@@ -1,8 +1,8 @@
 /**
- * Copyright (c) 2014,2019 Contributors to the Eclipse Foundation
+ * Copyright (c) 2010-2020 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
- * information regarding copyright ownership.
+ * information.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License 2.0 which is available at
@@ -14,46 +14,49 @@ package org.openhab.core.automation.module.script.internal.defaultscope;
 
 import java.io.File;
 import java.net.URLEncoder;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashMap;
-import java.util.LinkedList;
 import java.util.Map;
-import java.util.Queue;
+import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
 
-import org.apache.commons.io.FileUtils;
-import org.apache.commons.io.FilenameUtils;
-import org.apache.commons.lang.StringUtils;
-import org.eclipse.smarthome.core.events.EventPublisher;
-import org.eclipse.smarthome.core.items.ItemRegistry;
-import org.eclipse.smarthome.core.library.types.DateTimeType;
-import org.eclipse.smarthome.core.library.types.DecimalType;
-import org.eclipse.smarthome.core.library.types.HSBType;
-import org.eclipse.smarthome.core.library.types.IncreaseDecreaseType;
-import org.eclipse.smarthome.core.library.types.NextPreviousType;
-import org.eclipse.smarthome.core.library.types.OnOffType;
-import org.eclipse.smarthome.core.library.types.OpenClosedType;
-import org.eclipse.smarthome.core.library.types.PercentType;
-import org.eclipse.smarthome.core.library.types.PlayPauseType;
-import org.eclipse.smarthome.core.library.types.PointType;
-import org.eclipse.smarthome.core.library.types.QuantityType;
-import org.eclipse.smarthome.core.library.types.RawType;
-import org.eclipse.smarthome.core.library.types.RewindFastforwardType;
-import org.eclipse.smarthome.core.library.types.StopMoveType;
-import org.eclipse.smarthome.core.library.types.StringListType;
-import org.eclipse.smarthome.core.library.types.StringType;
-import org.eclipse.smarthome.core.library.types.UpDownType;
-import org.eclipse.smarthome.core.library.unit.ImperialUnits;
-import org.eclipse.smarthome.core.library.unit.MetricPrefix;
-import org.eclipse.smarthome.core.library.unit.SIUnits;
-import org.eclipse.smarthome.core.library.unit.SmartHomeUnits;
-import org.eclipse.smarthome.core.thing.ThingRegistry;
-import org.eclipse.smarthome.core.thing.binding.ThingActions;
-import org.eclipse.smarthome.core.types.Command;
-import org.eclipse.smarthome.core.types.State;
-import org.eclipse.smarthome.core.types.UnDefType;
+import org.eclipse.jdt.annotation.NonNullByDefault;
+import org.eclipse.jdt.annotation.Nullable;
 import org.openhab.core.automation.RuleRegistry;
 import org.openhab.core.automation.module.script.ScriptExtensionProvider;
+import org.openhab.core.events.EventPublisher;
+import org.openhab.core.items.ItemRegistry;
+import org.openhab.core.library.types.DateTimeType;
+import org.openhab.core.library.types.DecimalType;
+import org.openhab.core.library.types.HSBType;
+import org.openhab.core.library.types.IncreaseDecreaseType;
+import org.openhab.core.library.types.NextPreviousType;
+import org.openhab.core.library.types.OnOffType;
+import org.openhab.core.library.types.OpenClosedType;
+import org.openhab.core.library.types.PercentType;
+import org.openhab.core.library.types.PlayPauseType;
+import org.openhab.core.library.types.PointType;
+import org.openhab.core.library.types.QuantityType;
+import org.openhab.core.library.types.RawType;
+import org.openhab.core.library.types.RewindFastforwardType;
+import org.openhab.core.library.types.StopMoveType;
+import org.openhab.core.library.types.StringListType;
+import org.openhab.core.library.types.StringType;
+import org.openhab.core.library.types.UpDownType;
+import org.openhab.core.library.unit.BinaryPrefix;
+import org.openhab.core.library.unit.ImperialUnits;
+import org.openhab.core.library.unit.MetricPrefix;
+import org.openhab.core.library.unit.SIUnits;
+import org.openhab.core.library.unit.Units;
+import org.openhab.core.thing.ThingRegistry;
+import org.openhab.core.thing.binding.ThingActions;
+import org.openhab.core.types.Command;
+import org.openhab.core.types.RefreshType;
+import org.openhab.core.types.State;
+import org.openhab.core.types.UnDefType;
 import org.osgi.service.component.annotations.Activate;
 import org.osgi.service.component.annotations.Component;
 import org.osgi.service.component.annotations.Deactivate;
@@ -62,98 +65,39 @@ import org.osgi.service.component.annotations.ReferenceCardinality;
 import org.osgi.service.component.annotations.ReferencePolicy;
 
 /**
- * This is a default scope provider for stuff that is of general interest in an ESH-based solution.
+ * This is a default scope provider for stuff that is of general interest in an OH-based solution.
  * Nonetheless, solutions are free to remove it and have more specific scope providers for their own purposes.
  *
  * @author Kai Kreuzer - Initial contribution
- * @author Simon Merschjohann - refactored to be an ScriptExtensionProvider
- *
+ * @author Simon Merschjohann - Refactored to be a {@link ScriptExtensionProvider}
  */
 @Component(immediate = true)
+@NonNullByDefault
 public class DefaultScriptScopeProvider implements ScriptExtensionProvider {
 
-    private final Queue<ThingActions> queuedBeforeActivation = new LinkedList<>();
+    private static final String PRESET_DEFAULT = "default";
 
-    private Map<String, Object> elements;
+    private final Map<String, Object> elements = new ConcurrentHashMap<>();
 
-    private ItemRegistry itemRegistry;
-
-    private ThingRegistry thingRegistry;
-
-    private EventPublisher eventPublisher;
-
-    private ScriptBusEvent busEvent;
-
-    private ScriptThingActions thingActions;
-
-    private RuleRegistry ruleRegistry;
-
-    @Reference
-    protected void setRuleRegistry(RuleRegistry ruleRegistry) {
-        this.ruleRegistry = ruleRegistry;
-    }
-
-    protected void unsetRuleRegistry(RuleRegistry ruleRegistry) {
-        this.ruleRegistry = null;
-    }
-
-    @Reference
-    protected void setThingRegistry(ThingRegistry thingRegistry) {
-        this.thingRegistry = thingRegistry;
-    }
-
-    protected void unsetThingRegistry(ThingRegistry thingRegistry) {
-        this.thingRegistry = null;
-    }
-
-    @Reference
-    protected void setItemRegistry(ItemRegistry itemRegistry) {
-        this.itemRegistry = itemRegistry;
-    }
-
-    protected void unsetItemRegistry(ItemRegistry itemRegistry) {
-        this.itemRegistry = null;
-    }
-
-    @Reference
-    protected void setEventPublisher(EventPublisher eventPublisher) {
-        this.eventPublisher = eventPublisher;
-    }
-
-    protected void unsetEventPublisher(EventPublisher eventPublisher) {
-        this.eventPublisher = null;
-    }
-
-    @Reference(policy = ReferencePolicy.DYNAMIC, cardinality = ReferenceCardinality.MULTIPLE)
-    synchronized void addThingActions(ThingActions thingActions) {
-        if (this.thingActions == null) { // bundle may not be active yet
-            queuedBeforeActivation.add(thingActions);
-        } else {
-            this.thingActions.addThingActions(thingActions);
-            elements.put(thingActions.getClass().getSimpleName(), thingActions.getClass());
-        }
-    }
-
-    protected void removeThingActions(ThingActions thingActions) {
-        elements.remove(thingActions.getClass().getSimpleName());
-        this.thingActions.removeThingActions(thingActions);
-    }
+    private final ScriptBusEvent busEvent;
+    private final ScriptThingActions thingActions;
 
     @Activate
-    protected synchronized void activate() {
-        busEvent = new ScriptBusEvent(itemRegistry, eventPublisher);
-        thingActions = new ScriptThingActions(thingRegistry);
+    public DefaultScriptScopeProvider(final @Reference ItemRegistry itemRegistry,
+            final @Reference ThingRegistry thingRegistry, final @Reference RuleRegistry ruleRegistry,
+            final @Reference EventPublisher eventPublisher) {
+        this.busEvent = new ScriptBusEvent(itemRegistry, eventPublisher);
+        this.thingActions = new ScriptThingActions(thingRegistry);
 
-        elements = new HashMap<>();
         elements.put("State", State.class);
         elements.put("Command", Command.class);
-        elements.put("StringUtils", StringUtils.class);
         elements.put("URLEncoder", URLEncoder.class);
-        elements.put("FileUtils", FileUtils.class);
-        elements.put("FilenameUtils", FilenameUtils.class);
         elements.put("File", File.class);
+        elements.put("Files", Files.class);
+        elements.put("Path", Path.class);
+        elements.put("Paths", Paths.class);
 
-        // ESH types
+        // types
         elements.put("IncreaseDecreaseType", IncreaseDecreaseType.class);
         elements.put("DECREASE", IncreaseDecreaseType.DECREASE);
         elements.put("INCREASE", IncreaseDecreaseType.INCREASE);
@@ -177,6 +121,9 @@ public class DefaultScriptScopeProvider implements ScriptExtensionProvider {
         elements.put("UnDefType", UnDefType.class);
         elements.put("NULL", UnDefType.NULL);
         elements.put("UNDEF", UnDefType.UNDEF);
+
+        elements.put("RefreshType", RefreshType.class);
+        elements.put("REFRESH", RefreshType.REFRESH);
 
         elements.put("NextPreviousType", NextPreviousType.class);
         elements.put("NEXT", NextPreviousType.NEXT);
@@ -203,39 +150,45 @@ public class DefaultScriptScopeProvider implements ScriptExtensionProvider {
         elements.put("SIUnits", SIUnits.class);
         elements.put("ImperialUnits", ImperialUnits.class);
         elements.put("MetricPrefix", MetricPrefix.class);
-        elements.put("SmartHomeUnits", SmartHomeUnits.class);
+        elements.put("Units", Units.class);
+        elements.put("BinaryPrefix", BinaryPrefix.class);
 
         // services
         elements.put("items", new ItemRegistryDelegate(itemRegistry));
         elements.put("ir", itemRegistry);
         elements.put("itemRegistry", itemRegistry);
         elements.put("things", thingRegistry);
-        elements.put("events", busEvent);
         elements.put("rules", ruleRegistry);
+        elements.put("events", busEvent);
         elements.put("actions", thingActions);
+    }
 
-        // if any thingActions were queued before this got activated, add them now
-        queuedBeforeActivation.forEach(thingActions -> this.addThingActions(thingActions));
-        queuedBeforeActivation.clear();
+    @Reference(policy = ReferencePolicy.DYNAMIC, cardinality = ReferenceCardinality.MULTIPLE)
+    synchronized void addThingActions(ThingActions thingActions) {
+        this.thingActions.addThingActions(thingActions);
+        elements.put(thingActions.getClass().getSimpleName(), thingActions.getClass());
+    }
+
+    protected void removeThingActions(ThingActions thingActions) {
+        elements.remove(thingActions.getClass().getSimpleName());
+        this.thingActions.removeThingActions(thingActions);
     }
 
     @Deactivate
     protected void deactivate() {
         busEvent.dispose();
-        busEvent = null;
         thingActions.dispose();
-        thingActions = null;
-        elements = null;
+        elements.clear();
     }
 
     @Override
     public Collection<String> getDefaultPresets() {
-        return Collections.singleton("default");
+        return Set.of(PRESET_DEFAULT);
     }
 
     @Override
     public Collection<String> getPresets() {
-        return Collections.singleton("default");
+        return Set.of(PRESET_DEFAULT);
     }
 
     @Override
@@ -244,22 +197,20 @@ public class DefaultScriptScopeProvider implements ScriptExtensionProvider {
     }
 
     @Override
-    public Object get(String scriptIdentifier, String type) {
+    public @Nullable Object get(String scriptIdentifier, String type) {
         return elements.get(type);
     }
 
     @Override
     public Map<String, Object> importPreset(String scriptIdentifier, String preset) {
-        if (preset.equals("default")) {
-            return elements;
+        if (PRESET_DEFAULT.equals(preset)) {
+            return Collections.unmodifiableMap(elements);
         }
-
-        return null;
+        return Collections.emptyMap();
     }
 
     @Override
     public void unload(String scriptIdentifier) {
         // nothing todo
     }
-
 }
