@@ -1,8 +1,8 @@
 /**
- * Copyright (c) 2014,2019 Contributors to the Eclipse Foundation
+ * Copyright (c) 2010-2020 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
- * information regarding copyright ownership.
+ * information.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License 2.0 which is available at
@@ -16,12 +16,14 @@ import static org.openhab.core.automation.RulePredicates.*;
 
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
+import javax.annotation.security.RolesAllowed;
 import javax.ws.rs.Consumes;
 import javax.ws.rs.DELETE;
 import javax.ws.rs.GET;
@@ -37,12 +39,12 @@ import javax.ws.rs.core.Response;
 import javax.ws.rs.core.Response.Status;
 import javax.ws.rs.core.UriInfo;
 
-import org.eclipse.smarthome.config.core.ConfigUtil;
-import org.eclipse.smarthome.config.core.Configuration;
-import org.eclipse.smarthome.io.rest.JSONResponse;
-import org.eclipse.smarthome.io.rest.RESTResource;
+import org.eclipse.jdt.annotation.NonNullByDefault;
+import org.eclipse.jdt.annotation.Nullable;
+import org.openhab.core.auth.Role;
 import org.openhab.core.automation.Action;
 import org.openhab.core.automation.Condition;
+import org.openhab.core.automation.ManagedRuleProvider;
 import org.openhab.core.automation.Module;
 import org.openhab.core.automation.Rule;
 import org.openhab.core.automation.RuleManager;
@@ -61,68 +63,90 @@ import org.openhab.core.automation.rest.internal.dto.EnrichedRuleDTO;
 import org.openhab.core.automation.rest.internal.dto.EnrichedRuleDTOMapper;
 import org.openhab.core.automation.util.ModuleBuilder;
 import org.openhab.core.automation.util.RuleBuilder;
+import org.openhab.core.config.core.ConfigUtil;
+import org.openhab.core.config.core.Configuration;
+import org.openhab.core.io.rest.DTOMapper;
+import org.openhab.core.io.rest.JSONResponse;
+import org.openhab.core.io.rest.RESTConstants;
+import org.openhab.core.io.rest.RESTResource;
+import org.openhab.core.io.rest.Stream2JSONInputStream;
+import org.osgi.service.component.annotations.Activate;
 import org.osgi.service.component.annotations.Component;
 import org.osgi.service.component.annotations.Reference;
-import org.osgi.service.component.annotations.ReferenceCardinality;
-import org.osgi.service.component.annotations.ReferencePolicy;
+import org.osgi.service.jaxrs.whiteboard.JaxrsWhiteboardConstants;
+import org.osgi.service.jaxrs.whiteboard.propertytypes.JSONRequired;
+import org.osgi.service.jaxrs.whiteboard.propertytypes.JaxrsApplicationSelect;
+import org.osgi.service.jaxrs.whiteboard.propertytypes.JaxrsName;
+import org.osgi.service.jaxrs.whiteboard.propertytypes.JaxrsResource;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import io.swagger.annotations.Api;
-import io.swagger.annotations.ApiOperation;
-import io.swagger.annotations.ApiParam;
-import io.swagger.annotations.ApiResponse;
-import io.swagger.annotations.ApiResponses;
-import io.swagger.annotations.ResponseHeader;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.headers.Header;
+import io.swagger.v3.oas.annotations.media.ArraySchema;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import io.swagger.v3.oas.annotations.tags.Tag;
 
 /**
- * This class acts as a REST resource for rules and is registered with the Jersey servlet.
+ * This class acts as a REST resource for rules.
  *
  * @author Kai Kreuzer - Initial contribution
  * @author Markus Rathgeb - Use DTOs
+ * @author Markus Rathgeb - Migrated to JAX-RS Whiteboard Specification
+ * @author Wouter Born - Migrated to OpenAPI annotations
  */
-@Path("rules")
-@Api("rules")
 @Component
+@JaxrsResource
+@JaxrsName(RuleResource.PATH_RULES)
+@JaxrsApplicationSelect("(" + JaxrsWhiteboardConstants.JAX_RS_NAME + "=" + RESTConstants.JAX_RS_NAME + ")")
+@JSONRequired
+@Path(RuleResource.PATH_RULES)
+@RolesAllowed({ Role.ADMIN })
+@SecurityRequirement(name = "oauth2", scopes = { "admin" })
+@Tag(name = RuleResource.PATH_RULES)
+@NonNullByDefault
 public class RuleResource implements RESTResource {
+
+    /** The URI path to this resource */
+    public static final String PATH_RULES = "rules";
 
     private final Logger logger = LoggerFactory.getLogger(RuleResource.class);
 
-    private RuleRegistry ruleRegistry;
-    private RuleManager ruleManager;
+    private final DTOMapper dtoMapper;
+    private final RuleManager ruleManager;
+    private final RuleRegistry ruleRegistry;
+    private final ManagedRuleProvider managedRuleProvider;
 
-    @Context
-    private UriInfo uriInfo;
+    private @Context @NonNullByDefault({}) UriInfo uriInfo;
 
-    @Reference(cardinality = ReferenceCardinality.OPTIONAL, policy = ReferencePolicy.DYNAMIC)
-    protected void setRuleRegistry(RuleRegistry ruleRegistry) {
-        this.ruleRegistry = ruleRegistry;
-    }
-
-    protected void unsetRuleRegistry(RuleRegistry ruleRegistry) {
-        this.ruleRegistry = null;
-    }
-
-    @Reference(cardinality = ReferenceCardinality.OPTIONAL, policy = ReferencePolicy.DYNAMIC)
-    protected void setRuleManager(RuleManager ruleManager) {
+    @Activate
+    public RuleResource( //
+            final @Reference DTOMapper dtoMapper, //
+            final @Reference RuleManager ruleManager, //
+            final @Reference RuleRegistry ruleRegistry, //
+            final @Reference ManagedRuleProvider managedRuleProvider) {
+        this.dtoMapper = dtoMapper;
         this.ruleManager = ruleManager;
-    }
-
-    protected void unsetRuleManager(RuleManager ruleManager) {
-        this.ruleManager = null;
+        this.ruleRegistry = ruleRegistry;
+        this.managedRuleProvider = managedRuleProvider;
     }
 
     @GET
     @Produces(MediaType.APPLICATION_JSON)
-    @ApiOperation(value = "Get available rules, optionally filtered by tags and/or prefix.", response = EnrichedRuleDTO.class, responseContainer = "Collection")
-    @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "OK", response = EnrichedRuleDTO.class, responseContainer = "Collection") })
-    public Response get(@QueryParam("prefix") final String prefix, @QueryParam("tags") final List<String> tags) {
+    @Operation(operationId = "getRules", summary = "Get available rules, optionally filtered by tags and/or prefix.", responses = {
+            @ApiResponse(responseCode = "200", description = "OK", content = @Content(array = @ArraySchema(schema = @Schema(implementation = EnrichedRuleDTO.class)))) })
+    public Response get(@QueryParam("prefix") final @Nullable String prefix,
+            @QueryParam("tags") final @Nullable List<String> tags,
+            @QueryParam("summary") @Parameter(description = "summary fields only") @Nullable Boolean summary) {
         // match all
         Predicate<Rule> p = r -> true;
 
         // prefix parameter has been used
-        if (null != prefix) {
+        if (prefix != null) {
             // works also for null prefix
             // (empty prefix used if searching for rules without prefix)
             p = p.and(hasPrefix(prefix));
@@ -131,26 +155,27 @@ public class RuleResource implements RESTResource {
         // if tags is null or empty list returns all rules
         p = p.and(hasAllTags(tags));
 
-        final Collection<EnrichedRuleDTO> rules = ruleRegistry.stream().filter(p) // filter according to Predicates
-                .map(rule -> EnrichedRuleDTOMapper.map(rule, ruleManager)) // map matching rules
-                .collect(Collectors.toList());
+        Stream<EnrichedRuleDTO> rules = ruleRegistry.stream().filter(p) // filter according to Predicates
+                .map(rule -> EnrichedRuleDTOMapper.map(rule, ruleManager, managedRuleProvider)); // map matching rules
+        if (summary != null && summary == true) {
+            rules = dtoMapper.limitToFields(rules, "uid,templateUID,name,visibility,description,status,tags,editable");
+        }
 
-        return Response.ok(rules).build();
+        return Response.ok(new Stream2JSONInputStream(rules)).build();
     }
 
     @POST
     @Consumes(MediaType.APPLICATION_JSON)
-    @ApiOperation(value = "Creates a rule.")
     @Produces(MediaType.APPLICATION_JSON)
-    @ApiResponses(value = {
-            @ApiResponse(code = 201, message = "Created", responseHeaders = @ResponseHeader(name = "Location", description = "Newly created Rule", response = String.class)),
-            @ApiResponse(code = 409, message = "Creation of the rule is refused. Rule with the same UID already exists."),
-            @ApiResponse(code = 400, message = "Creation of the rule is refused. Missing required parameter.") })
-    public Response create(@ApiParam(value = "rule data", required = true) RuleDTO rule) throws IOException {
+    @Operation(operationId = "createRule", summary = "Creates a rule.", responses = {
+            @ApiResponse(responseCode = "201", description = "Created", headers = @Header(name = "Location", description = "Newly created Rule")),
+            @ApiResponse(responseCode = "409", description = "Creation of the rule is refused. Rule with the same UID already exists."),
+            @ApiResponse(responseCode = "400", description = "Creation of the rule is refused. Missing required parameter.") })
+    public Response create(@Parameter(description = "rule data", required = true) RuleDTO rule) throws IOException {
         try {
             final Rule newRule = ruleRegistry.add(RuleDTOMapper.map(rule));
             return Response.status(Status.CREATED)
-                    .header("Location", "rules/" + URLEncoder.encode(newRule.getUID(), "UTF-8")).build();
+                    .header("Location", "rules/" + URLEncoder.encode(newRule.getUID(), StandardCharsets.UTF_8)).build();
         } catch (IllegalArgumentException e) {
             String errMessage = "Creation of the rule is refused: " + e.getMessage();
             logger.warn("{}", errMessage);
@@ -165,13 +190,13 @@ public class RuleResource implements RESTResource {
     @GET
     @Path("/{ruleUID}")
     @Produces(MediaType.APPLICATION_JSON)
-    @ApiOperation(value = "Gets the rule corresponding to the given UID.", response = EnrichedRuleDTO.class)
-    @ApiResponses(value = { @ApiResponse(code = 200, message = "OK", response = EnrichedRuleDTO.class),
-            @ApiResponse(code = 404, message = "Rule not found") })
-    public Response getByUID(@PathParam("ruleUID") @ApiParam(value = "ruleUID", required = true) String ruleUID) {
+    @Operation(operationId = "getRuleById", summary = "Gets the rule corresponding to the given UID.", responses = {
+            @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = EnrichedRuleDTO.class))),
+            @ApiResponse(responseCode = "404", description = "Rule not found") })
+    public Response getByUID(@PathParam("ruleUID") @Parameter(description = "ruleUID") String ruleUID) {
         Rule rule = ruleRegistry.get(ruleUID);
         if (rule != null) {
-            return Response.ok(EnrichedRuleDTOMapper.map(rule, ruleManager)).build();
+            return Response.ok(EnrichedRuleDTOMapper.map(rule, ruleManager, managedRuleProvider)).build();
         } else {
             return Response.status(Status.NOT_FOUND).build();
         }
@@ -180,10 +205,10 @@ public class RuleResource implements RESTResource {
     @DELETE
     @Path("/{ruleUID}")
     @Produces(MediaType.APPLICATION_JSON)
-    @ApiOperation(value = "Removes an existing rule corresponding to the given UID.")
-    @ApiResponses(value = { @ApiResponse(code = 200, message = "OK", response = String.class),
-            @ApiResponse(code = 404, message = "Rule corresponding to the given UID does not found.") })
-    public Response remove(@PathParam("ruleUID") @ApiParam(value = "ruleUID", required = true) String ruleUID) {
+    @Operation(operationId = "deleteRule", summary = "Removes an existing rule corresponding to the given UID.", responses = {
+            @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = String.class))),
+            @ApiResponse(responseCode = "404", description = "Rule corresponding to the given UID does not found.") })
+    public Response remove(@PathParam("ruleUID") @Parameter(description = "ruleUID") String ruleUID) {
         Rule removedRule = ruleRegistry.remove(ruleUID);
         if (removedRule == null) {
             logger.info("Received HTTP DELETE request at '{}' for the unknown rule '{}'.", uriInfo.getPath(), ruleUID);
@@ -196,11 +221,11 @@ public class RuleResource implements RESTResource {
     @PUT
     @Path("/{ruleUID}")
     @Consumes(MediaType.APPLICATION_JSON)
-    @ApiOperation(value = "Updates an existing rule corresponding to the given UID.")
-    @ApiResponses(value = { @ApiResponse(code = 200, message = "OK"),
-            @ApiResponse(code = 404, message = "Rule corresponding to the given UID does not found.") })
-    public Response update(@PathParam("ruleUID") @ApiParam(value = "ruleUID", required = true) String ruleUID,
-            @ApiParam(value = "rule data", required = true) RuleDTO rule) throws IOException {
+    @Operation(operationId = "updateRule", summary = "Updates an existing rule corresponding to the given UID.", responses = {
+            @ApiResponse(responseCode = "200", description = "OK"),
+            @ApiResponse(responseCode = "404", description = "Rule corresponding to the given UID does not found.") })
+    public Response update(@PathParam("ruleUID") @Parameter(description = "ruleUID") String ruleUID,
+            @Parameter(description = "rule data", required = true) RuleDTO rule) throws IOException {
         rule.uid = ruleUID;
         final Rule oldRule = ruleRegistry.update(RuleDTOMapper.map(rule));
         if (oldRule == null) {
@@ -215,10 +240,10 @@ public class RuleResource implements RESTResource {
     @GET
     @Path("/{ruleUID}/config")
     @Produces(MediaType.APPLICATION_JSON)
-    @ApiOperation(value = "Gets the rule configuration values.")
-    @ApiResponses(value = { @ApiResponse(code = 200, message = "OK", response = String.class),
-            @ApiResponse(code = 404, message = "Rule corresponding to the given UID does not found.") })
-    public Response getConfiguration(@PathParam("ruleUID") @ApiParam(value = "ruleUID", required = true) String ruleUID)
+    @Operation(operationId = "getRuleConfiguration", summary = "Gets the rule configuration values.", responses = {
+            @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = String.class))),
+            @ApiResponse(responseCode = "404", description = "Rule corresponding to the given UID does not found.") })
+    public Response getConfiguration(@PathParam("ruleUID") @Parameter(description = "ruleUID") String ruleUID)
             throws IOException {
         Rule rule = ruleRegistry.get(ruleUID);
         if (rule == null) {
@@ -233,13 +258,13 @@ public class RuleResource implements RESTResource {
     @PUT
     @Path("/{ruleUID}/config")
     @Consumes(MediaType.APPLICATION_JSON)
-    @ApiOperation(value = "Sets the rule configuration values.")
-    @ApiResponses(value = { @ApiResponse(code = 200, message = "OK"),
-            @ApiResponse(code = 404, message = "Rule corresponding to the given UID does not found.") })
-    public Response updateConfiguration(
-            @PathParam("ruleUID") @ApiParam(value = "ruleUID", required = true) String ruleUID,
-            @ApiParam(value = "config") Map<String, Object> configurationParameters) throws IOException {
-        Map<String, Object> config = ConfigUtil.normalizeTypes(configurationParameters);
+    @Operation(operationId = "updateRuleConfiguration", summary = "Sets the rule configuration values.", responses = {
+            @ApiResponse(responseCode = "200", description = "OK"),
+            @ApiResponse(responseCode = "404", description = "Rule corresponding to the given UID does not found.") })
+    public Response updateConfiguration(@PathParam("ruleUID") @Parameter(description = "ruleUID") String ruleUID,
+            @Parameter(description = "config") Map<String, @Nullable Object> configurationParameters)
+            throws IOException {
+        Map<String, @Nullable Object> config = ConfigUtil.normalizeTypes(configurationParameters);
         Rule rule = ruleRegistry.get(ruleUID);
         if (rule == null) {
             logger.info("Received HTTP PUT request for update config at '{}' for the unknown rule '{}'.",
@@ -255,11 +280,11 @@ public class RuleResource implements RESTResource {
     @POST
     @Path("/{ruleUID}/enable")
     @Consumes(MediaType.TEXT_PLAIN)
-    @ApiOperation(value = "Sets the rule enabled status.")
-    @ApiResponses(value = { @ApiResponse(code = 200, message = "OK"),
-            @ApiResponse(code = 404, message = "Rule corresponding to the given UID does not found.") })
-    public Response enableRule(@PathParam("ruleUID") @ApiParam(value = "ruleUID", required = true) String ruleUID,
-            @ApiParam(value = "enable", required = true) String enabled) throws IOException {
+    @Operation(operationId = "enableRule", summary = "Sets the rule enabled status.", responses = {
+            @ApiResponse(responseCode = "200", description = "OK"),
+            @ApiResponse(responseCode = "404", description = "Rule corresponding to the given UID does not found.") })
+    public Response enableRule(@PathParam("ruleUID") @Parameter(description = "ruleUID") String ruleUID,
+            @Parameter(description = "enable", required = true) String enabled) throws IOException {
         Rule rule = ruleRegistry.get(ruleUID);
         if (rule == null) {
             logger.info("Received HTTP PUT request for set enabled at '{}' for the unknown rule '{}'.",
@@ -272,12 +297,13 @@ public class RuleResource implements RESTResource {
     }
 
     @POST
+    @RolesAllowed({ Role.USER, Role.ADMIN })
     @Path("/{ruleUID}/runnow")
     @Consumes(MediaType.TEXT_PLAIN)
-    @ApiOperation(value = "Executes actions of the rule.")
-    @ApiResponses(value = { @ApiResponse(code = 200, message = "OK"),
-            @ApiResponse(code = 404, message = "Rule corresponding to the given UID does not found.") })
-    public Response runNow(@PathParam("ruleUID") @ApiParam(value = "ruleUID", required = true) String ruleUID)
+    @Operation(operationId = "runRuleNow", summary = "Executes actions of the rule.", responses = {
+            @ApiResponse(responseCode = "200", description = "OK"),
+            @ApiResponse(responseCode = "404", description = "Rule corresponding to the given UID does not found.") })
+    public Response runNow(@PathParam("ruleUID") @Parameter(description = "ruleUID") String ruleUID)
             throws IOException {
         Rule rule = ruleRegistry.get(ruleUID);
         if (rule == null) {
@@ -293,11 +319,10 @@ public class RuleResource implements RESTResource {
     @GET
     @Path("/{ruleUID}/triggers")
     @Produces(MediaType.APPLICATION_JSON)
-    @ApiOperation(value = "Gets the rule triggers.", response = TriggerDTO.class, responseContainer = "List")
-    @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "OK", response = TriggerDTO.class, responseContainer = "List"),
-            @ApiResponse(code = 404, message = "Rule corresponding to the given UID does not found.") })
-    public Response getTriggers(@PathParam("ruleUID") @ApiParam(value = "ruleUID", required = true) String ruleUID) {
+    @Operation(operationId = "getRuleTriggers", summary = "Gets the rule triggers.", responses = {
+            @ApiResponse(responseCode = "200", description = "OK", content = @Content(array = @ArraySchema(schema = @Schema(implementation = TriggerDTO.class)))),
+            @ApiResponse(responseCode = "404", description = "Rule corresponding to the given UID does not found.") })
+    public Response getTriggers(@PathParam("ruleUID") @Parameter(description = "ruleUID") String ruleUID) {
         Rule rule = ruleRegistry.get(ruleUID);
         if (rule != null) {
             return Response.ok(TriggerDTOMapper.map(rule.getTriggers())).build();
@@ -309,11 +334,10 @@ public class RuleResource implements RESTResource {
     @GET
     @Path("/{ruleUID}/conditions")
     @Produces(MediaType.APPLICATION_JSON)
-    @ApiOperation(value = "Gets the rule conditions.", response = ConditionDTO.class, responseContainer = "List")
-    @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "OK", response = ConditionDTO.class, responseContainer = "List"),
-            @ApiResponse(code = 404, message = "Rule corresponding to the given UID does not found.") })
-    public Response getConditions(@PathParam("ruleUID") @ApiParam(value = "ruleUID", required = true) String ruleUID) {
+    @Operation(operationId = "getRuleConditions", summary = "Gets the rule conditions.", responses = {
+            @ApiResponse(responseCode = "200", description = "OK", content = @Content(array = @ArraySchema(schema = @Schema(implementation = ConditionDTO.class)))),
+            @ApiResponse(responseCode = "404", description = "Rule corresponding to the given UID does not found.") })
+    public Response getConditions(@PathParam("ruleUID") @Parameter(description = "ruleUID") String ruleUID) {
         Rule rule = ruleRegistry.get(ruleUID);
         if (rule != null) {
             return Response.ok(ConditionDTOMapper.map(rule.getConditions())).build();
@@ -325,11 +349,10 @@ public class RuleResource implements RESTResource {
     @GET
     @Path("/{ruleUID}/actions")
     @Produces(MediaType.APPLICATION_JSON)
-    @ApiOperation(value = "Gets the rule actions.", response = ActionDTO.class, responseContainer = "List")
-    @ApiResponses(value = {
-            @ApiResponse(code = 200, message = "OK", response = ActionDTO.class, responseContainer = "List"),
-            @ApiResponse(code = 404, message = "Rule corresponding to the given UID does not found.") })
-    public Response getActions(@PathParam("ruleUID") @ApiParam(value = "ruleUID", required = true) String ruleUID) {
+    @Operation(operationId = "getRuleActions", summary = "Gets the rule actions.", responses = {
+            @ApiResponse(responseCode = "200", description = "OK", content = @Content(array = @ArraySchema(schema = @Schema(implementation = ActionDTO.class)))),
+            @ApiResponse(responseCode = "404", description = "Rule corresponding to the given UID does not found.") })
+    public Response getActions(@PathParam("ruleUID") @Parameter(description = "ruleUID") String ruleUID) {
         Rule rule = ruleRegistry.get(ruleUID);
         if (rule != null) {
             return Response.ok(ActionDTOMapper.map(rule.getActions())).build();
@@ -341,12 +364,12 @@ public class RuleResource implements RESTResource {
     @GET
     @Path("/{ruleUID}/{moduleCategory}/{id}")
     @Produces(MediaType.APPLICATION_JSON)
-    @ApiOperation(value = "Gets the rule's module corresponding to the given Category and ID.", response = ModuleDTO.class)
-    @ApiResponses(value = { @ApiResponse(code = 200, message = "OK", response = ModuleDTO.class),
-            @ApiResponse(code = 404, message = "Rule corresponding to the given UID does not found or does not have a module with such Category and ID.") })
-    public Response getModuleById(@PathParam("ruleUID") @ApiParam(value = "ruleUID", required = true) String ruleUID,
-            @PathParam("moduleCategory") @ApiParam(value = "moduleCategory", required = true) String moduleCategory,
-            @PathParam("id") @ApiParam(value = "id", required = true) String id) {
+    @Operation(operationId = "getRuleModuleById", summary = "Gets the rule's module corresponding to the given Category and ID.", responses = {
+            @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = ModuleDTO.class))),
+            @ApiResponse(responseCode = "404", description = "Rule corresponding to the given UID does not found or does not have a module with such Category and ID.") })
+    public Response getModuleById(@PathParam("ruleUID") @Parameter(description = "ruleUID") String ruleUID,
+            @PathParam("moduleCategory") @Parameter(description = "moduleCategory") String moduleCategory,
+            @PathParam("id") @Parameter(description = "id") String id) {
         Rule rule = ruleRegistry.get(ruleUID);
         if (rule != null) {
             final ModuleDTO dto = getModuleDTO(rule, moduleCategory, id);
@@ -360,12 +383,12 @@ public class RuleResource implements RESTResource {
     @GET
     @Path("/{ruleUID}/{moduleCategory}/{id}/config")
     @Produces(MediaType.APPLICATION_JSON)
-    @ApiOperation(value = "Gets the module's configuration.")
-    @ApiResponses(value = { @ApiResponse(code = 200, message = "OK", response = String.class),
-            @ApiResponse(code = 404, message = "Rule corresponding to the given UID does not found or does not have a module with such Category and ID.") })
-    public Response getModuleConfig(@PathParam("ruleUID") @ApiParam(value = "ruleUID", required = true) String ruleUID,
-            @PathParam("moduleCategory") @ApiParam(value = "moduleCategory", required = true) String moduleCategory,
-            @PathParam("id") @ApiParam(value = "id", required = true) String id) {
+    @Operation(operationId = "getRuleModuleConfig", summary = "Gets the module's configuration.", responses = {
+            @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = String.class))),
+            @ApiResponse(responseCode = "404", description = "Rule corresponding to the given UID does not found or does not have a module with such Category and ID.") })
+    public Response getModuleConfig(@PathParam("ruleUID") @Parameter(description = "ruleUID") String ruleUID,
+            @PathParam("moduleCategory") @Parameter(description = "moduleCategory") String moduleCategory,
+            @PathParam("id") @Parameter(description = "id") String id) {
         Rule rule = ruleRegistry.get(ruleUID);
         if (rule != null) {
             Module module = getModule(rule, moduleCategory, id);
@@ -379,14 +402,13 @@ public class RuleResource implements RESTResource {
     @GET
     @Path("/{ruleUID}/{moduleCategory}/{id}/config/{param}")
     @Produces(MediaType.TEXT_PLAIN)
-    @ApiOperation(value = "Gets the module's configuration parameter.", response = String.class)
-    @ApiResponses(value = { @ApiResponse(code = 200, message = "OK", response = String.class),
-            @ApiResponse(code = 404, message = "Rule corresponding to the given UID does not found or does not have a module with such Category and ID.") })
-    public Response getModuleConfigParam(
-            @PathParam("ruleUID") @ApiParam(value = "ruleUID", required = true) String ruleUID,
-            @PathParam("moduleCategory") @ApiParam(value = "moduleCategory", required = true) String moduleCategory,
-            @PathParam("id") @ApiParam(value = "id", required = true) String id,
-            @PathParam("param") @ApiParam(value = "param", required = true) String param) {
+    @Operation(operationId = "getRuleModuleConfigParameter", summary = "Gets the module's configuration parameter.", responses = {
+            @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = String.class))),
+            @ApiResponse(responseCode = "404", description = "Rule corresponding to the given UID does not found or does not have a module with such Category and ID.") })
+    public Response getModuleConfigParam(@PathParam("ruleUID") @Parameter(description = "ruleUID") String ruleUID,
+            @PathParam("moduleCategory") @Parameter(description = "moduleCategory") String moduleCategory,
+            @PathParam("id") @Parameter(description = "id") String id,
+            @PathParam("param") @Parameter(description = "param") String param) {
         Rule rule = ruleRegistry.get(ruleUID);
         if (rule != null) {
             Module module = getModule(rule, moduleCategory, id);
@@ -399,16 +421,15 @@ public class RuleResource implements RESTResource {
 
     @PUT
     @Path("/{ruleUID}/{moduleCategory}/{id}/config/{param}")
-    @ApiOperation(value = "Sets the module's configuration parameter value.")
-    @ApiResponses(value = { @ApiResponse(code = 200, message = "OK"),
-            @ApiResponse(code = 404, message = "Rule corresponding to the given UID does not found or does not have a module with such Category and ID.") })
+    @Operation(operationId = "setRuleModuleConfigParameter", summary = "Sets the module's configuration parameter value.", responses = {
+            @ApiResponse(responseCode = "200", description = "OK"),
+            @ApiResponse(responseCode = "404", description = "Rule corresponding to the given UID does not found or does not have a module with such Category and ID.") })
     @Consumes(MediaType.TEXT_PLAIN)
-    public Response setModuleConfigParam(
-            @PathParam("ruleUID") @ApiParam(value = "ruleUID", required = true) String ruleUID,
-            @PathParam("moduleCategory") @ApiParam(value = "moduleCategory", required = true) String moduleCategory,
-            @PathParam("id") @ApiParam(value = "id", required = true) String id,
-            @PathParam("param") @ApiParam(value = "param", required = true) String param,
-            @ApiParam(value = "value", required = true) String value) {
+    public Response setModuleConfigParam(@PathParam("ruleUID") @Parameter(description = "ruleUID") String ruleUID,
+            @PathParam("moduleCategory") @Parameter(description = "moduleCategory") String moduleCategory,
+            @PathParam("id") @Parameter(description = "id") String id,
+            @PathParam("param") @Parameter(description = "param") String param,
+            @Parameter(description = "value", required = true) String value) {
         Rule rule = ruleRegistry.get(ruleUID);
         if (rule != null) {
             Module module = getModule(rule, moduleCategory, id);
@@ -423,7 +444,7 @@ public class RuleResource implements RESTResource {
         return Response.status(Status.NOT_FOUND).build();
     }
 
-    protected <T extends Module> T getModuleById(final Collection<T> coll, final String id) {
+    protected @Nullable <T extends Module> T getModuleById(final @Nullable Collection<T> coll, final String id) {
         if (coll == null) {
             return null;
         }
@@ -435,48 +456,42 @@ public class RuleResource implements RESTResource {
         return null;
     }
 
-    protected Trigger getTrigger(Rule rule, String id) {
+    protected @Nullable Trigger getTrigger(Rule rule, String id) {
         return getModuleById(rule.getTriggers(), id);
     }
 
-    protected Condition getCondition(Rule rule, String id) {
+    protected @Nullable Condition getCondition(Rule rule, String id) {
         return getModuleById(rule.getConditions(), id);
     }
 
-    protected Action getAction(Rule rule, String id) {
+    protected @Nullable Action getAction(Rule rule, String id) {
         return getModuleById(rule.getActions(), id);
     }
 
-    protected Module getModule(Rule rule, String moduleCategory, String id) {
-        if (moduleCategory.equals("triggers")) {
+    protected @Nullable Module getModule(Rule rule, String moduleCategory, String id) {
+        if ("triggers".equals(moduleCategory)) {
             return getTrigger(rule, id);
-        } else if (moduleCategory.equals("conditions")) {
+        } else if ("conditions".equals(moduleCategory)) {
             return getCondition(rule, id);
-        } else if (moduleCategory.equals("actions")) {
+        } else if ("actions".equals(moduleCategory)) {
             return getAction(rule, id);
         } else {
             return null;
         }
     }
 
-    protected ModuleDTO getModuleDTO(Rule rule, String moduleCategory, String id) {
-        if (moduleCategory.equals("triggers")) {
+    protected @Nullable ModuleDTO getModuleDTO(Rule rule, String moduleCategory, String id) {
+        if ("triggers".equals(moduleCategory)) {
             final Trigger trigger = getTrigger(rule, id);
             return trigger == null ? null : TriggerDTOMapper.map(trigger);
-        } else if (moduleCategory.equals("conditions")) {
+        } else if ("conditions".equals(moduleCategory)) {
             final Condition condition = getCondition(rule, id);
             return condition == null ? null : ConditionDTOMapper.map(condition);
-        } else if (moduleCategory.equals("actions")) {
+        } else if ("actions".equals(moduleCategory)) {
             final Action action = getAction(rule, id);
             return action == null ? null : ActionDTOMapper.map(action);
         } else {
             return null;
         }
     }
-
-    @Override
-    public boolean isSatisfied() {
-        return ruleRegistry != null && ruleManager != null;
-    }
-
 }
