@@ -1,8 +1,8 @@
 /**
- * Copyright (c) 2014,2019 Contributors to the Eclipse Foundation
+ * Copyright (c) 2010-2020 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
- * information regarding copyright ownership.
+ * information.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License 2.0 which is available at
@@ -12,24 +12,22 @@
  */
 package org.openhab.core.automation.internal.module.handler;
 
-import java.util.Collections;
 import java.util.Dictionary;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Hashtable;
 import java.util.Map;
 import java.util.Set;
 
-import org.eclipse.smarthome.core.events.Event;
-import org.eclipse.smarthome.core.events.EventFilter;
-import org.eclipse.smarthome.core.events.EventSubscriber;
-import org.eclipse.smarthome.core.items.events.GroupItemStateChangedEvent;
-import org.eclipse.smarthome.core.items.events.ItemStateChangedEvent;
-import org.eclipse.smarthome.core.items.events.ItemStateEvent;
-import org.eclipse.smarthome.core.types.State;
 import org.openhab.core.automation.Trigger;
 import org.openhab.core.automation.handler.BaseTriggerModuleHandler;
 import org.openhab.core.automation.handler.TriggerHandlerCallback;
+import org.openhab.core.events.Event;
+import org.openhab.core.events.EventFilter;
+import org.openhab.core.events.EventSubscriber;
+import org.openhab.core.items.events.GroupItemStateChangedEvent;
+import org.openhab.core.items.events.ItemStateChangedEvent;
+import org.openhab.core.items.events.ItemStateEvent;
+import org.openhab.core.types.State;
 import org.osgi.framework.BundleContext;
 import org.osgi.framework.ServiceRegistration;
 import org.slf4j.Logger;
@@ -40,11 +38,18 @@ import org.slf4j.LoggerFactory;
  * if an item state event occurs. The eventType and state value can be set with the
  * configuration.
  *
- * @author Kai Kreuzer - Initial contribution and API
- * @author Simon Merschjohann
- *
+ * @author Kai Kreuzer - Initial contribution
+ * @author Simon Merschjohann - Initial contribution
  */
 public class ItemStateTriggerHandler extends BaseTriggerModuleHandler implements EventSubscriber, EventFilter {
+
+    public static final String UPDATE_MODULE_TYPE_ID = "core.ItemStateUpdateTrigger";
+    public static final String CHANGE_MODULE_TYPE_ID = "core.ItemStateChangeTrigger";
+
+    public static final String CFG_ITEMNAME = "itemName";
+    public static final String CFG_STATE = "state";
+    public static final String CFG_PREVIOUS_STATE = "previousState";
+
     private final Logger logger = LoggerFactory.getLogger(ItemStateTriggerHandler.class);
 
     private final String itemName;
@@ -53,15 +58,7 @@ public class ItemStateTriggerHandler extends BaseTriggerModuleHandler implements
     private Set<String> types;
     private final BundleContext bundleContext;
 
-    public static final String UPDATE_MODULE_TYPE_ID = "core.ItemStateUpdateTrigger";
-    public static final String CHANGE_MODULE_TYPE_ID = "core.ItemStateChangeTrigger";
-
-    private static final String CFG_ITEMNAME = "itemName";
-    private static final String CFG_STATE = "state";
-    private static final String CFG_PREVIOUS_STATE = "previousState";
-
-    @SuppressWarnings("rawtypes")
-    private ServiceRegistration eventSubscriberRegistration;
+    private ServiceRegistration<?> eventSubscriberRegistration;
 
     public ItemStateTriggerHandler(Trigger module, BundleContext bundleContext) {
         super(module);
@@ -69,16 +66,13 @@ public class ItemStateTriggerHandler extends BaseTriggerModuleHandler implements
         this.state = (String) module.getConfiguration().get(CFG_STATE);
         this.previousState = (String) module.getConfiguration().get(CFG_PREVIOUS_STATE);
         if (UPDATE_MODULE_TYPE_ID.equals(module.getTypeUID())) {
-            this.types = Collections.singleton(ItemStateEvent.TYPE);
+            this.types = Set.of(ItemStateEvent.TYPE);
         } else {
-            HashSet<String> set = new HashSet<>();
-            set.add(ItemStateChangedEvent.TYPE);
-            set.add(GroupItemStateChangedEvent.TYPE);
-            this.types = Collections.unmodifiableSet(set);
+            this.types = Set.of(ItemStateChangedEvent.TYPE, GroupItemStateChangedEvent.TYPE);
         }
         this.bundleContext = bundleContext;
-        Dictionary<String, Object> properties = new Hashtable<String, Object>();
-        properties.put("event.topics", "smarthome/items/" + itemName + "/*");
+        Dictionary<String, Object> properties = new Hashtable<>();
+        properties.put("event.topics", "openhab/items/" + itemName + "/*");
         eventSubscriberRegistration = this.bundleContext.registerService(EventSubscriber.class.getName(), this,
                 properties);
     }
@@ -144,7 +138,6 @@ public class ItemStateTriggerHandler extends BaseTriggerModuleHandler implements
     @Override
     public boolean apply(Event event) {
         logger.trace("->FILTER: {}:{}", event.getTopic(), itemName);
-        return event.getTopic().contains("smarthome/items/" + itemName + "/");
+        return event.getTopic().contains("openhab/items/" + itemName + "/");
     }
-
 }
