@@ -1,8 +1,8 @@
 /**
- * Copyright (c) 2014,2019 Contributors to the Eclipse Foundation
+ * Copyright (c) 2010-2020 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
- * information regarding copyright ownership.
+ * information.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License 2.0 which is available at
@@ -16,11 +16,12 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
+import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
-import org.eclipse.smarthome.config.core.ConfigDescriptionParameter;
 import org.openhab.core.automation.Action;
 import org.openhab.core.automation.Module;
 import org.openhab.core.automation.Visibility;
+import org.openhab.core.config.core.ConfigDescriptionParameter;
 
 /**
  * This class provides common functionality for creating {@link Action} instances by supplying their meta-information.
@@ -28,10 +29,11 @@ import org.openhab.core.automation.Visibility;
  * {@link ConfigDescriptionParameter}s that are meta-information for configuration of the future {@link Action}
  * instances and meta-information for {@link Input}s and {@link Output}s used from these {@link Action} instances.
  *
- * @author Yordan Mihaylov - Initial Contribution
- * @author Ana Dimova - Initial Contribution
- * @author Vasil Ilchev - Initial Contribution
+ * @author Yordan Mihaylov - Initial contribution
+ * @author Ana Dimova - Initial contribution
+ * @author Vasil Ilchev - Initial contribution
  */
+@NonNullByDefault
 public class ActionType extends ModuleType {
 
     /**
@@ -50,14 +52,14 @@ public class ActionType extends ModuleType {
      * Creates an instance of {@link ActionType} with base properties - UID, a {@link List} of configuration
      * descriptions and a {@link List} of {@link Input} definitions.
      *
-     * @param UID                the {@link ActionType}'s identifier, or {@code null} if a random identifier should be
-     *                           generated.
+     * @param UID the {@link ActionType}'s identifier, or {@code null} if a random identifier should be
+     *            generated.
      * @param configDescriptions describing meta-data for the configuration of the future {@link Action} instances.
-     * @param inputs             a {@link List} with {@link Input} meta-information descriptions of the future
-     *                           {@link Action} instances.
+     * @param inputs a {@link List} with {@link Input} meta-information descriptions of the future
+     *            {@link Action} instances.
      */
     public ActionType(@Nullable String UID, @Nullable List<ConfigDescriptionParameter> configDescriptions,
-            List<Input> inputs) {
+            @Nullable List<Input> inputs) {
         this(UID, configDescriptions, inputs, null);
     }
 
@@ -65,13 +67,13 @@ public class ActionType extends ModuleType {
      * Creates an instance of the {@link ActionType} with UID, a {@link List} of configuration descriptions,
      * a {@link List} of {@link Input} definitions and a {@link List} of {@link Output} descriptions.
      *
-     * @param UID                the {@link ActionType}'s identifier, or {@code null} if a random identifier should be
-     *                           generated.
+     * @param UID the {@link ActionType}'s identifier, or {@code null} if a random identifier should be
+     *            generated.
      * @param configDescriptions describing meta-data for the configuration of the future {@link Action} instances.
-     * @param inputs             a {@link List} with {@link Input} meta-information descriptions of the future
-     *                           {@link Action} instances.
-     * @param outputs            a {@link List} with {@link Output} meta-information descriptions of the future
-     *                           {@link Action} instances.
+     * @param inputs a {@link List} with {@link Input} meta-information descriptions of the future
+     *            {@link Action} instances.
+     * @param outputs a {@link List} with {@link Output} meta-information descriptions of the future
+     *            {@link Action} instances.
      */
     public ActionType(@Nullable String UID, @Nullable List<ConfigDescriptionParameter> configDescriptions,
             @Nullable List<Input> inputs, @Nullable List<Output> outputs) {
@@ -83,26 +85,26 @@ public class ActionType extends ModuleType {
      * a {@link List} of configuration descriptions, a {@link List} of {@link Input} descriptions and a {@link List}
      * of {@link Output} descriptions.
      *
-     * @param UID                the {@link ActionType}'s identifier, or {@code null} if a random identifier should be
-     *                           generated.
+     * @param UID the {@link ActionType}'s identifier, or {@code null} if a random identifier should be
+     *            generated.
      * @param configDescriptions describing meta-data for the configuration of the future {@link Action} instances.
-     * @param label              is a short and accurate name of the {@link ActionType}.
-     * @param description        is a short and understandable description of which can be used the {@link ActionType}.
-     * @param tags               defines categories that fit the {@link ActionType} and which can serve as criteria for
-     *                           searching or filtering it.
-     * @param visibility         determines whether the {@link ActionType} can be used by anyone if it is
-     *                           {@link Visibility#VISIBLE} or only by its creator if it is {@link Visibility#HIDDEN}.
-     * @param inputs             a {@link List} with {@link Input} meta-information descriptions of the future
-     *                           {@link Action} instances.
-     * @param outputs            a {@link List} with {@link Output} meta-information descriptions of the future
-     *                           {@link Action} instances.
+     * @param label is a short and accurate name of the {@link ActionType}.
+     * @param description is a short and understandable description of which can be used the {@link ActionType}.
+     * @param tags defines categories that fit the {@link ActionType} and which can serve as criteria for
+     *            searching or filtering it.
+     * @param visibility determines whether the {@link ActionType} can be used by anyone if it is
+     *            {@link Visibility#VISIBLE} or only by its creator if it is {@link Visibility#HIDDEN}.
+     * @param inputs a {@link List} with {@link Input} meta-information descriptions of the future
+     *            {@link Action} instances.
+     * @param outputs a {@link List} with {@link Output} meta-information descriptions of the future
+     *            {@link Action} instances.
      */
     public ActionType(@Nullable String UID, @Nullable List<ConfigDescriptionParameter> configDescriptions,
             @Nullable String label, @Nullable String description, @Nullable Set<String> tags,
             @Nullable Visibility visibility, @Nullable List<Input> inputs, @Nullable List<Output> outputs) {
         super(UID, configDescriptions, label, description, tags, visibility);
-        this.inputs = inputs != null ? Collections.unmodifiableList(inputs) : Collections.emptyList();
-        this.outputs = outputs != null ? Collections.unmodifiableList(outputs) : Collections.emptyList();
+        this.inputs = inputs != null ? Collections.unmodifiableList(inputs) : List.of();
+        this.outputs = outputs != null ? Collections.unmodifiableList(outputs) : List.of();
     }
 
     /**
@@ -122,5 +124,4 @@ public class ActionType extends ModuleType {
     public List<Output> getOutputs() {
         return outputs;
     }
-
 }
