@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2019 Contributors to the openHAB project
+ * Copyright (c) 2010-2020 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -12,13 +12,15 @@
  */
 package org.openhab.core.karaf.internal;
 
+import static java.util.function.Predicate.not;
+
 import java.io.FileInputStream;
 import java.io.IOException;
-import java.net.URI;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.Dictionary;
 import java.util.EnumSet;
 import java.util.Enumeration;
@@ -29,20 +31,21 @@ import java.util.List;
 import java.util.Map;
 import java.util.Properties;
 import java.util.Set;
-import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-import org.apache.commons.lang.StringUtils;
 import org.apache.karaf.features.Feature;
 import org.apache.karaf.features.FeaturesService;
-import org.eclipse.smarthome.config.core.ConfigConstants;
-import org.eclipse.smarthome.core.events.Event;
-import org.eclipse.smarthome.core.events.EventPublisher;
-import org.eclipse.smarthome.core.extension.ExtensionEventFactory;
 import org.openhab.core.OpenHAB;
+import org.openhab.core.addon.AddonEventFactory;
+import org.openhab.core.common.NamedThreadFactory;
+import org.openhab.core.config.core.ConfigurableService;
+import org.openhab.core.events.Event;
+import org.openhab.core.events.EventPublisher;
 import org.osgi.service.cm.Configuration;
 import org.osgi.service.cm.ConfigurationAdmin;
 import org.osgi.service.cm.ConfigurationEvent;
@@ -56,22 +59,29 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
- * This service reads addons.cfg and installs listed addons (= Karaf features) and the selected package.
- * It furthermore allows configuration of the base package through the Paper UI as well as administrating Karaf to
- * access remote repos and certain feature repos like for legacy or experimental features.
+ * This service reads addons.cfg and installs listed add-ons (= Karaf features) and the selected package.
+ * It furthermore allows configuration of the base package through the UI as well as administrating Karaf to
+ * access remote repos and certain feature repos like for experimental features.
  *
- * @author Kai Kreuzer - Initial contribution and API
+ * @author Kai Kreuzer - Initial contribution
  */
-@Component(name = "org.openhab.addons", service = { FeatureInstaller.class, ConfigurationListener.class }, property = {
-        "service.config.description.uri:String=system:addons", //
-        "service.config.label:String=Add-on Management", //
-        "service.config.category:String=system" //
-})
+@Component(name = "org.openhab.addons", service = { FeatureInstaller.class, ConfigurationListener.class })
+@ConfigurableService(category = "system", label = "Add-on Management", description_uri = FeatureInstaller.CONFIG_URI)
 public class FeatureInstaller implements ConfigurationListener {
 
+    protected static final String CONFIG_URI = "system:addons";
+
+    public static final String EXTENSION_TYPE_AUTOMATION = "automation";
+    public static final String EXTENSION_TYPE_BINDING = "binding";
+    public static final String EXTENSION_TYPE_MISC = "misc";
+    public static final String EXTENSION_TYPE_PERSISTENCE = "persistence";
+    public static final String EXTENSION_TYPE_TRANSFORMATION = "transformation";
+    public static final String EXTENSION_TYPE_UI = "ui";
+    public static final String EXTENSION_TYPE_VOICE = "voice";
+
+    public static final String SIMPLE_PACKAGE = "simple";
     public static final String MINIMAL_PACKAGE = "minimal";
     private static final String CFG_REMOTE = "remote";
-    private static final String CFG_LEGACY = "legacy";
 
     private static final String PAX_URL_PID = "org.ops4j.pax.url.mvn";
     private static final String ADDONS_PID = "org.openhab.addons";
@@ -81,41 +91,39 @@ public class FeatureInstaller implements ConfigurationListener {
     public static final String PREFIX = "openhab-";
     public static final String PREFIX_PACKAGE = "package-";
 
-    public static final String[] addonTypes = new String[] { "binding", "ui", "persistence", "action", "voice",
-            "transformation", "misc" };
+    public static final String[] EXTENSION_TYPES = new String[] { EXTENSION_TYPE_AUTOMATION, EXTENSION_TYPE_BINDING,
+            EXTENSION_TYPE_MISC, EXTENSION_TYPE_PERSISTENCE, EXTENSION_TYPE_TRANSFORMATION, EXTENSION_TYPE_UI,
+            EXTENSION_TYPE_VOICE };
 
     private final Logger logger = LoggerFactory.getLogger(FeatureInstaller.class);
 
-    private String online_repo_url = null;
-    private URI legacy_addons_url = null;
+    private String onlineRepoUrl = null;
 
-    private FeaturesService featuresService;
-    private ConfigurationAdmin configurationAdmin;
+    private final ConfigurationAdmin configurationAdmin;
+    private final FeaturesService featuresService;
     private static EventPublisher eventPublisher;
 
     private ScheduledExecutorService scheduler;
 
     private boolean paxCfgUpdated = true; // a flag used to check whether CM has already successfully updated the pax
                                           // configuration as this must be waited for before trying to add feature repos
+    private Map<String, Object> configMapCache;
 
     private static String currentPackage = null;
 
-    @Reference
-    protected void setFeaturesService(FeaturesService featuresService) {
-        this.featuresService = featuresService;
+    private static boolean anyMatchingFeature(Feature[] features, Predicate<Feature> predicate) {
+        return Stream.of(features).anyMatch(predicate);
     }
 
-    protected void unsetFeaturesService(FeaturesService featuresService) {
-        this.featuresService = null;
+    private static Predicate<Feature> withName(final String name) {
+        return feature -> feature.getName().equals(name);
     }
 
-    @Reference
-    protected void setConfigurationAdmin(ConfigurationAdmin configurationAdmin) {
+    @Activate
+    public FeatureInstaller(final @Reference ConfigurationAdmin configurationAdmin,
+            final @Reference FeaturesService featuresService) {
         this.configurationAdmin = configurationAdmin;
-    }
-
-    protected void unsetConfigurationAdmin(ConfigurationAdmin configurationAdmin) {
-        this.configurationAdmin = null;
+        this.featuresService = featuresService;
     }
 
     @Reference
@@ -127,12 +135,15 @@ public class FeatureInstaller implements ConfigurationListener {
         FeatureInstaller.eventPublisher = null;
     }
 
+    private Exception debugException(Exception e) {
+        return logger.isDebugEnabled() ? e : null;
+    }
+
     @Activate
     protected void activate(final Map<String, Object> config) {
+        scheduler = Executors.newSingleThreadScheduledExecutor(new NamedThreadFactory("karaf-addons"));
         setOnlineRepoUrl();
-        setLegacyRepoUrl();
         modified(config);
-        scheduler = Executors.newSingleThreadScheduledExecutor();
         scheduler.scheduleWithFixedDelay(() -> {
             logger.debug("Running scheduled sync job");
             try {
@@ -143,7 +154,10 @@ public class FeatureInstaller implements ConfigurationListener {
                     final String key = enumeration.nextElement();
                     cfgMap.put(key, cfg.get(key));
                 }
-                modified(cfgMap);
+                if (!cfgMap.equals(configMapCache)) {
+                    configMapCache = cfgMap;
+                    modified(cfgMap);
+                }
             } catch (IOException e) {
                 logger.debug("Failed to retrieve the addons configuration from configuration admin: {}",
                         e.getMessage());
@@ -174,20 +188,16 @@ public class FeatureInstaller implements ConfigurationListener {
             paxCfgUpdated = false;
         }
 
-        final FeaturesService service = featuresService;
-        ExecutorService scheduler = Executors.newSingleThreadExecutor();
-
         scheduler.execute(() -> {
             if (configChanged) {
                 waitForConfigUpdateEvent();
             }
-            setLegacyExtensions(service, config);
-            if (installPackage(service, config)) {
+            if (installPackage(config)) {
                 // our package selection has changed, so let's wait for the values to be available in config admin
                 // which we will receive as another call to modified
                 return;
             }
-            installAddons(service, config);
+            installAddons(config);
         });
     }
 
@@ -214,7 +224,7 @@ public class FeatureInstaller implements ConfigurationListener {
                 List<String> newAddonIds = new ArrayList<>(trimmedAddonIds.size() + 1);
                 newAddonIds.addAll(trimmedAddonIds);
                 newAddonIds.add(id);
-                props.put(type, StringUtils.join(newAddonIds, ','));
+                props.put(type, newAddonIds.stream().collect(Collectors.joining(",")));
                 cfg.update(props);
                 return true;
             } else {
@@ -222,7 +232,7 @@ public class FeatureInstaller implements ConfigurationListener {
                 return false;
             }
         } catch (IOException e) {
-            logger.warn("Adding add-on 'openhab-{}-{}' failed: {}", type, id, e.getMessage());
+            logger.warn("Adding add-on 'openhab-{}-{}' failed: {}", type, id, e.getMessage(), debugException(e));
             return false;
         }
     }
@@ -238,7 +248,7 @@ public class FeatureInstaller implements ConfigurationListener {
             if (trimmedAddonIds.contains(id)) {
                 List<String> newAddonIds = new ArrayList<>(trimmedAddonIds);
                 boolean success = newAddonIds.remove(id);
-                props.put(type, StringUtils.join(newAddonIds, ','));
+                props.put(type, newAddonIds.stream().collect(Collectors.joining(",")));
                 cfg.update(props);
                 return success;
             } else {
@@ -246,7 +256,7 @@ public class FeatureInstaller implements ConfigurationListener {
                 return false;
             }
         } catch (IOException e) {
-            logger.warn("Removing add-on 'openhab-{}-{}' failed: {}", type, id, e.getMessage());
+            logger.warn("Removing add-on 'openhab-{}-{}' failed: {}", type, id, e.getMessage(), debugException(e));
             return false;
         }
     }
@@ -254,67 +264,24 @@ public class FeatureInstaller implements ConfigurationListener {
     private void setOnlineRepoUrl() {
         Properties prop = new Properties();
 
-        Path versionFilePath = Paths.get(ConfigConstants.getUserDataFolder(), "etc", "version.properties");
+        Path versionFilePath = Paths.get(OpenHAB.getUserDataFolder(), "etc", "version.properties");
         try (FileInputStream fis = new FileInputStream(versionFilePath.toFile())) {
             prop.load(fis);
         } catch (Exception e) {
             logger.warn("Cannot determine online repo url - online repo support will be disabled. Error: {}",
-                    e.getMessage());
+                    e.getMessage(), debugException(e));
         }
 
         String repo = prop.getProperty("online-repo");
         if (repo != null && !repo.trim().isEmpty()) {
-            this.online_repo_url = repo.trim() + "@id=openhab@snapshots";
+            this.onlineRepoUrl = repo.trim() + "@id=openhab@snapshots";
         } else {
             logger.warn("Cannot determine online repo url - online repo support will be disabled.");
         }
     }
 
-    private void setLegacyRepoUrl() {
-        Properties prop = new Properties();
-
-        Path versionFilePath = Paths.get(ConfigConstants.getUserDataFolder(), "etc", "version.properties");
-        try (FileInputStream fis = new FileInputStream(versionFilePath.toFile())) {
-            prop.load(fis);
-        } catch (Exception e) {
-            logger.warn("Cannot determine distro version - legacy addon support will be disabled. Error: {}",
-                    e.getMessage());
-        }
-
-        String version = prop.getProperty("openhab-distro");
-        if (version != null && !version.trim().isEmpty()) {
-            this.legacy_addons_url = URI
-                    .create("mvn:org.openhab.distro/openhab-addons-legacy/" + version.trim() + "/xml/features");
-        } else {
-            logger.warn("Cannot determine distro version - legacy addon support will be disabled.");
-        }
-    }
-
-    private void setLegacyExtensions(FeaturesService service, Map<String, Object> config) {
-        if (legacy_addons_url != null) {
-            if (config.get(CFG_LEGACY) != null && "true".equals(config.get(CFG_LEGACY).toString())) {
-                try {
-                    service.addRepository(legacy_addons_url);
-                } catch (Exception e) {
-                    logger.debug("Failed adding feature repo for legacy features - we might be offline: {}",
-                            e.getMessage());
-                }
-            } else {
-                try {
-                    service.removeRepository(legacy_addons_url);
-                } catch (Exception e) {
-                    // This usually throws an error like
-                    // "Feature named 'openhab-binding-homematic1/1.9.0.SNAPSHOT' is not installed"
-                    // as Karaf seems to try to uninstall all features for whatever reason
-                    // the repo is removed nonetheless in such a case
-                    logger.debug("Failed removing feature repo of legacy features: {}", e.getMessage());
-                }
-            }
-        }
-    }
-
     private boolean getOnlineStatus() {
-        if (online_repo_url != null) {
+        if (onlineRepoUrl != null) {
             try {
                 Configuration paxCfg = configurationAdmin.getConfiguration(PAX_URL_PID, null);
                 Dictionary<String, Object> properties = paxCfg.getProperties();
@@ -324,11 +291,12 @@ public class FeatureInstaller implements ConfigurationListener {
                 Object repos = properties.get(PROPERTY_MVN_REPOS);
                 List<String> repoCfg;
                 if (repos instanceof String) {
-                    repoCfg = Arrays.asList(((String) repos).split(","));
-                    return repoCfg.contains(online_repo_url);
+                    repoCfg = List.of(((String) repos).split(","));
+                    return repoCfg.contains(onlineRepoUrl);
                 }
             } catch (IOException e) {
-                logger.error("Failed getting the add-on management online/offline mode: {}", e.getMessage());
+                logger.error("Failed getting the add-on management online/offline mode: {}", e.getMessage(),
+                        debugException(e));
             }
         }
         return false;
@@ -336,7 +304,7 @@ public class FeatureInstaller implements ConfigurationListener {
 
     private boolean setOnlineStatus(boolean status) {
         boolean changed = false;
-        if (online_repo_url != null) {
+        if (onlineRepoUrl != null) {
             try {
                 Configuration paxCfg = configurationAdmin.getConfiguration(PAX_URL_PID, null);
                 paxCfg.setBundleLocation("?");
@@ -351,62 +319,67 @@ public class FeatureInstaller implements ConfigurationListener {
                     repoCfg.remove("");
                 }
                 if (status) {
-                    if (!repoCfg.contains(online_repo_url)) {
-                        repoCfg.add(online_repo_url);
+                    if (!repoCfg.contains(onlineRepoUrl)) {
+                        repoCfg.add(onlineRepoUrl);
                         changed = true;
-                        logger.debug("Added repo '{}' to feature repo list.", online_repo_url);
+                        logger.debug("Added repo '{}' to feature repo list.", onlineRepoUrl);
                     }
                 } else {
-                    if (repoCfg.contains(online_repo_url)) {
-                        repoCfg.remove(online_repo_url);
+                    if (repoCfg.contains(onlineRepoUrl)) {
+                        repoCfg.remove(onlineRepoUrl);
                         changed = true;
-                        logger.debug("Removed repo '{}' from feature repo list.", online_repo_url);
+                        logger.debug("Removed repo '{}' from feature repo list.", onlineRepoUrl);
                     }
                 }
                 if (changed) {
-                    properties.put(PROPERTY_MVN_REPOS, StringUtils.join(repoCfg.toArray(), ","));
+                    properties.put(PROPERTY_MVN_REPOS, repoCfg.stream().collect(Collectors.joining(",")));
                     paxCfg.update(properties);
                 }
             } catch (IOException e) {
-                logger.error("Failed setting the add-on management online/offline mode: {}", e.getMessage());
+                logger.error("Failed setting the add-on management online/offline mode: {}", e.getMessage(),
+                        debugException(e));
             }
         }
         return changed;
     }
 
-    private synchronized void installAddons(final FeaturesService service, final Map<String, Object> config) {
-
+    private synchronized void installAddons(final Map<String, Object> config) {
         final Set<String> currentAddons = new HashSet<>(); // the currently installed ones
         final Set<String> targetAddons = new HashSet<>(); // the target we want to have installed afterwards
         final Set<String> installAddons = new HashSet<>(); // the ones to be installed (the diff)
 
-        for (String type : addonTypes) {
-            Object install = config.get(type);
-            if (install instanceof String) {
-                String[] entries = ((String) install).split(",");
+        for (String type : EXTENSION_TYPES) {
+            Object configValue = config.get(type);
+            if (configValue instanceof String) {
                 try {
-                    Feature[] features = service.listInstalledFeatures();
-                    for (String addon : entries) {
-                        if (!StringUtils.isEmpty(addon)) {
-                            String id = PREFIX + type + "-" + addon.trim();
-                            targetAddons.add(id);
-                            if (!isInstalled(features, id)) {
-                                installAddons.add(id);
+                    Feature[] features = featuresService.listInstalledFeatures();
+                    String typePrefix = PREFIX + type + "-";
+                    Set<String> configFeatureNames = Stream.of(((String) configValue).split(",")) //
+                            .map(String::strip) //
+                            .filter(not(String::isEmpty)) //
+                            .map(addon -> typePrefix + addon) //
+                            .collect(Collectors.toSet());
+
+                    for (String name : configFeatureNames) {
+                        if (featuresService.getFeature(name) != null) {
+                            targetAddons.add(name);
+                            if (!anyMatchingFeature(features, withName(name))) {
+                                installAddons.add(name);
                             }
+                        } else {
+                            logger.warn("The {} add-on '{}' does not exist - ignoring it.", type,
+                                    name.substring(typePrefix.length()));
                         }
                     }
 
-                    // we collect all installed addons
-                    for (String addon : getAllAddonsOfType(service, type)) {
-                        if (!StringUtils.isEmpty(addon)) {
-                            String id = PREFIX + type + "-" + addon.trim();
-                            if (isInstalled(features, id)) {
-                                currentAddons.add(id);
-                            }
+                    // we collect all installed add-ons
+                    for (String name : getAllFeatureNamesWithPrefix(typePrefix)) {
+                        if (anyMatchingFeature(features, withName(name))) {
+                            currentAddons.add(name);
                         }
                     }
                 } catch (Exception e) {
-                    logger.error("Failed retrieving features: {}", e.getMessage());
+                    logger.error("Failed retrieving features: {}", e.getMessage(), debugException(e));
                 }
             }
         }
@@ -417,33 +390,32 @@ public class FeatureInstaller implements ConfigurationListener {
 
         // do the installation
         if (!installAddons.isEmpty()) {
-            installFeatures(service, installAddons);
+            installFeatures(installAddons);
         }
 
         // do the de-installation
         if (!uninstallAddons.isEmpty()) {
-            uninstallFeatures(service, uninstallAddons);
+            uninstallFeatures(uninstallAddons);
         }
     }
 
-    private Set<String> getAllAddonsOfType(FeaturesService featuresService, String type) {
-        Set<String> addons = new HashSet<>();
-        String prefix = FeatureInstaller.PREFIX + type + "-";
+    private Set<String> getAllFeatureNamesWithPrefix(String prefix) {
         try {
-            for (Feature feature : featuresService.listFeatures()) {
-                if (feature.getName().startsWith(prefix)) {
-                    addons.add(feature.getName().substring(prefix.length()));
-                }
-            }
+            return Arrays.stream(featuresService.listFeatures()) //
+                    .map(Feature::getName) //
+                    .filter(name -> name.startsWith(prefix)) //
+                    .collect(Collectors.toSet());
         } catch (Exception e) {
-            logger.error("Failed retrieving features: {}", e.getMessage());
+            logger.error("Failed retrieving features: {}", e.getMessage(), debugException(e));
+            return Collections.emptySet();
         }
-        return addons;
     }
 
-    private synchronized void installFeatures(FeaturesService featuresService, Set<String> addons) {
+    private synchronized void installFeatures(Set<String> addons) {
         try {
-            logger.debug("Installing '{}'", StringUtils.join(addons, ", "));
+            if (logger.isDebugEnabled()) {
+                logger.debug("Installing '{}'", addons.stream().collect(Collectors.joining(", ")));
+            }
             featuresService.installFeatures(addons,
                     EnumSet.of(FeaturesService.Option.Upgrade, FeaturesService.Option.NoFailOnFeatureNotFound));
             try {
@@ -452,61 +424,66 @@ public class FeatureInstaller implements ConfigurationListener {
                 Set<String> failed = new HashSet<>();
 
                 for (String addon : addons) {
-                    if (isInstalled(features, addon)) {
+                    if (anyMatchingFeature(features, withName(addon))) {
                         installed.add(addon);
                     } else {
                         failed.add(addon);
                     }
                 }
 
-                if (installed.size() > 0) {
-                    logger.debug("Installed '{}'", StringUtils.join(installed, ", "));
+                if (!installed.isEmpty() && logger.isDebugEnabled()) {
+                    logger.debug("Installed '{}'", installed.stream().collect(Collectors.joining(", ")));
                 }
-                if (failed.size() > 0) {
-                    logger.error("Failed installing '{}'", StringUtils.join(failed, ", "));
+                if (!failed.isEmpty()) {
+                    logger.error("Failed installing '{}'", failed.stream().collect(Collectors.joining(", ")));
+                    configMapCache = null; // make sure we retry the installation
                 }
 
                 for (String addon : installed) {
                     postInstalledEvent(addon);
                 }
             } catch (Exception e) {
-                logger.error("Failed retrieving features: {}", e.getMessage());
+                logger.error("Failed retrieving features: {}", e.getMessage(), debugException(e));
+                configMapCache = null; // make sure we retry the installation
             }
         } catch (Exception e) {
-            logger.error("Failed installing '{}': {}", StringUtils.join(addons, ", "), e.getMessage());
+            logger.error("Failed installing '{}': {}", addons.stream().collect(Collectors.joining(", ")),
+                    e.getMessage(), debugException(e));
+            configMapCache = null; // make sure we retry the installation
         }
     }
 
-    private synchronized void uninstallFeatures(FeaturesService featuresService, Set<String> addons) {
+    private synchronized void uninstallFeatures(Set<String> addons) {
         for (String addon : addons) {
-            uninstallFeature(featuresService, addon);
+            uninstallFeature(addon);
         }
     }
 
-    private synchronized boolean installFeature(FeaturesService featuresService, String name) {
+    private synchronized boolean installFeature(String name) {
         try {
             Feature[] features = featuresService.listInstalledFeatures();
-            if (!isInstalled(features, name)) {
+            if (!anyMatchingFeature(features, withName(name))) {
                 featuresService.installFeature(name);
                 features = featuresService.listInstalledFeatures();
-                if (isInstalled(features, name)) {
+                if (anyMatchingFeature(features, withName(name))) {
                     logger.debug("Installed '{}'", name);
                     postInstalledEvent(name);
                     return true;
                 }
             }
         } catch (Exception e) {
-            logger.error("Failed installing '{}': {}", name, e.getMessage());
+            logger.error("Failed installing '{}': {}", name, e.getMessage(), debugException(e));
+            configMapCache = null; // make sure we retry the installation
         }
         return false;
     }
 
-    private synchronized boolean uninstallFeature(FeaturesService featuresService, String name) {
+    private synchronized boolean uninstallFeature(String name) {
         try {
             Feature[] features = featuresService.listInstalledFeatures();
-            if (isInstalled(features, name)) {
+            if (anyMatchingFeature(features, withName(name))) {
                 featuresService.uninstallFeature(name);
-                logger.info("Uninstalled '{}'", name);
+                logger.debug("Uninstalled '{}'", name);
                 postUninstalledEvent(name);
                 return true;
             }
@@ -516,17 +493,17 @@ public class FeatureInstaller implements ConfigurationListener {
         return false;
     }
 
-    private synchronized boolean installPackage(FeaturesService featuresService, final Map<String, Object> config) {
+    private synchronized boolean installPackage(final Map<String, Object> config) {
         boolean configChanged = false;
         Object packageName = config.get(OpenHAB.CFG_PACKAGE);
         if (packageName instanceof String) {
             currentPackage = (String) packageName;
             String fullName = PREFIX + PREFIX_PACKAGE + ((String) packageName).trim();
-            if (currentPackage.equals(MINIMAL_PACKAGE)) {
+            if (MINIMAL_PACKAGE.equals(currentPackage)) {
                 // no changes are done to the add-ons list, so the installer should proceed
                 configChanged = false;
             } else {
-                if (installFeature(featuresService, fullName)) {
+                if (installFeature(fullName)) {
                     configChanged = true;
                 }
             }
@@ -535,32 +512,19 @@ public class FeatureInstaller implements ConfigurationListener {
             try {
                 for (Feature feature : featuresService.listFeatures()) {
                     if (feature.getName().startsWith(PREFIX + PREFIX_PACKAGE) && !feature.getName().equals(fullName)) {
-                        uninstallFeature(featuresService, feature.getName());
+                        uninstallFeature(feature.getName());
                     }
                 }
             } catch (Exception e) {
-                logger.error("Failed retrieving features: {}", e.getMessage());
+                logger.error("Failed retrieving features: {}", e.getMessage(), debugException(e));
             }
         }
         return configChanged;
     }
 
-    private boolean isInstalled(Feature[] features, String name) {
-        try {
-            for (Feature feature : features) {
-                if (feature.getName().equals(name)) {
-                    return true;
-                }
-            }
-        } catch (Exception e) {
-            logger.error("Failed retrieving features: {}", e.getMessage());
-        }
-        return false;
-    }
-
     @Override
     public void configurationEvent(ConfigurationEvent event) {
-        if (event.getPid().equals(PAX_URL_PID) && event.getType() == ConfigurationEvent.CM_UPDATED) {
+        if (PAX_URL_PID.equals(event.getPid()) && event.getType() == ConfigurationEvent.CM_UPDATED) {
             paxCfgUpdated = true;
         }
     }
@@ -568,7 +532,7 @@ public class FeatureInstaller implements ConfigurationListener {
     private static void postInstalledEvent(String featureName) {
         String extensionId = featureName.substring(PREFIX.length());
         if (eventPublisher != null) {
-            Event event = ExtensionEventFactory.createExtensionInstalledEvent(extensionId);
+            Event event = AddonEventFactory.createAddonInstalledEvent(extensionId);
             eventPublisher.post(event);
         }
     }
@@ -576,7 +540,7 @@ public class FeatureInstaller implements ConfigurationListener {
     private static void postUninstalledEvent(String featureName) {
         String extensionId = featureName.substring(PREFIX.length());
         if (eventPublisher != null) {
-            Event event = ExtensionEventFactory.createExtensionUninstalledEvent(extensionId);
+            Event event = AddonEventFactory.createAddonUninstalledEvent(extensionId);
             eventPublisher.post(event);
         }
     }
