@@ -1,8 +1,8 @@
 /**
- * Copyright (c) 2014,2019 Contributors to the Eclipse Foundation
+ * Copyright (c) 2010-2020 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
- * information regarding copyright ownership.
+ * information.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License 2.0 which is available at
@@ -13,32 +13,36 @@
 package org.openhab.core.automation.module.timer.internal;
 
 import static org.hamcrest.CoreMatchers.*;
-import static org.junit.Assert.assertThat;
+import static org.hamcrest.MatcherAssert.assertThat;
 
 import java.text.SimpleDateFormat;
-import java.util.Arrays;
-import java.util.Calendar;
+import java.time.ZonedDateTime;
 import java.util.Collections;
+import java.util.Date;
+import java.util.List;
 import java.util.Locale;
+import java.util.Map;
 
-import org.eclipse.smarthome.config.core.Configuration;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.openhab.core.automation.Condition;
 import org.openhab.core.automation.internal.module.handler.DayOfWeekConditionHandler;
 import org.openhab.core.automation.type.ModuleTypeRegistry;
 import org.openhab.core.automation.util.ModuleBuilder;
+import org.openhab.core.config.core.Configuration;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * This tests the dayOfWeek Condition.
  *
+ * @author Kai Kreuzer - Initial contribution
  * @author Dominik Schlierf - added extension of BasicConditionHandlerTest
- * @author Kai Kreuzer - initial contribution
- *
  */
 public class DayOfWeekConditionHandlerTest extends BasicConditionHandlerTest {
-    Calendar cal = Calendar.getInstance();
-    SimpleDateFormat sdf = new SimpleDateFormat("EEE", Locale.ENGLISH);
-    String dayOfWeek = sdf.format(cal.getTime()).toUpperCase();
+
+    private final Logger logger = LoggerFactory.getLogger(DayOfWeekConditionHandlerTest.class);
+    private SimpleDateFormat sdf = new SimpleDateFormat("EEE", Locale.ENGLISH);
+    private String dayOfWeek = sdf.format(Date.from(ZonedDateTime.now().toInstant())).toUpperCase();
 
     public DayOfWeekConditionHandlerTest() {
         logger.info("Today is {}", dayOfWeek);
@@ -46,27 +50,24 @@ public class DayOfWeekConditionHandlerTest extends BasicConditionHandlerTest {
 
     @Test
     public void assertThatConditionWorks() {
-        Configuration conditionConfiguration = new Configuration(Collections.singletonMap("days",
-                Arrays.asList(new String[] { "MON", "TUE", "WED", "THU", "FRI", "SAT", "SUN" })));
+        Configuration conditionConfiguration = new Configuration(
+                Map.of("days", List.of("MON", "TUE", "WED", "THU", "FRI", "SAT", "SUN")));
         Condition condition = ModuleBuilder.createCondition().withId("id")
                 .withTypeUID(DayOfWeekConditionHandler.MODULE_TYPE_ID).withConfiguration(conditionConfiguration)
                 .build();
         DayOfWeekConditionHandler handler = new DayOfWeekConditionHandler(condition);
 
-        assertThat(handler.isSatisfied(null), is(true));
+        assertThat(handler.isSatisfied(Collections.emptyMap()), is(true));
 
         condition = ModuleBuilder.createCondition(condition)
-                .withConfiguration(new Configuration(Collections.singletonMap("days", Collections.emptyList())))
-                .build();
+                .withConfiguration(new Configuration(Map.of("days", List.of()))).build();
         handler = new DayOfWeekConditionHandler(condition);
-        assertThat(handler.isSatisfied(null), is(false));
+        assertThat(handler.isSatisfied(Collections.emptyMap()), is(false));
 
         condition = ModuleBuilder.createCondition(condition)
-                .withConfiguration(
-                        new Configuration(Collections.singletonMap("days", Collections.singletonList(dayOfWeek))))
-                .build();
+                .withConfiguration(new Configuration(Map.of("days", List.of(dayOfWeek)))).build();
         handler = new DayOfWeekConditionHandler(condition);
-        assertThat(handler.isSatisfied(null), is(true));
+        assertThat(handler.isSatisfied(Collections.emptyMap()), is(true));
     }
 
     @Test
@@ -79,13 +80,13 @@ public class DayOfWeekConditionHandlerTest extends BasicConditionHandlerTest {
 
     @Override
     protected Condition getPassingCondition() {
-        Configuration conditionConfig = new Configuration(Collections.singletonMap("days", dayOfWeek));
+        Configuration conditionConfig = new Configuration(Map.of("days", dayOfWeek));
         return ModuleBuilder.createCondition().withId("MyDOWCondition")
                 .withTypeUID(DayOfWeekConditionHandler.MODULE_TYPE_ID).withConfiguration(conditionConfig).build();
     }
 
     @Override
     protected Configuration getFailingConfiguration() {
-        return new Configuration(Collections.singletonMap("days", Collections.emptyList()));
+        return new Configuration(Map.of("days", List.of()));
     }
 }
